<resources>
    <string name="app_name">Zerion Manage App</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_out">Log Out</string>
    <string name="detail_image">Detail Image</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="empty_field">Can not leave field empty</string>
    <string name="invalid_creds">Invalid Credentials</string>
</resources>
